--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-blinker==1.8.2
+blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
+dnspython==2.6.1
+email-validator==2.0.0.post2
 Flask==2.3.2
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
+Flask-WTF==1.2.1
 greenlet==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
+idna==3.7
+itsdangerous==2.1.2
+Jinja2==3.1.3
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
 SQLAlchemy==2.0.15
 typing_extensions==4.11.0
 Werkzeug==3.0.3
-WTForms==3.1.2
+WTForms==3.0.1
